# mlp-coursework3

./: .gitignore  analyze_darts.py  annotate_all.py  darts_scores.csv  data-collection-example.ipynb  download_video.py  extract_faces.py  extract_technique.py  gaze_tracking.py  inspect_video.py  interim-feedback.md  justfile  main.ipynb  new-spec.md  notes.md  plot_gaze.py  pyproject.toml  requirements.txt  spec.md  validate_scores.py  validation_issues.csv  verify_gaze.py
analysis/: generate_plots.py
apps/annotator/: app.py
apps/annotator/static/: app.js  styles.css
apps/annotator/templates/: index.html
data/backups/: annotations-before-delete-66098020-20260326-211332.sqlite3
exmaple-data/: lineups.json  matches.json
outputs/first_pass/tables/: baseline_comparison.csv  capture_quality.csv  dataset_summary.csv  fold_metrics.csv  metrics.json  model_comparison.csv  qa_summary.csv  wedge_19_vs_20_model_bootstrap.csv  wedge_19_vs_20_predictions.csv  wedge_number_model_bootstrap.csv  wedge_number_model_predictions.csv
score-data/: darts_intent_competitions.csv  darts_intent_matches.csv  darts_intent_players.csv
src/darts_gaze/: __init__.py  cli.py  config.py  dataset.py  gaze.py  matches.py  modeling.py  paper_figures.py  plots.py  reporting.py  sportradar.py  storage.py  sync.py  targets.py  types.py  video.py  webapp.py
tests/: conftest.py  test_dataset_pipeline.py  test_gaze.py  test_modeling.py  test_paper_figures.py  test_reporting.py  test_sportradar.py  test_sync.py  test_targets.py  test_webapp.py
tests/fixtures/: sample_timeline.json
(+20 files in other folders)
